Removed the use of init-container for downloading remote dependencies